# conversation-patterns

./: .gitignore  .sourcery.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: project_plan.md
models/: full_training_metrics.txt
src/coalla_memory/docs/: 2309.02427v3_Cognitive Architectures for Language Agents.txt
src/coalla_memory/memory/: config.py  working_memory.py
src/conversational_patterns/config/: settings.py
src/conversational_patterns/core/: pattern.py
src/custom_memory/: enhanced_memory_system.py
src/memory/: enhanced_memory_demo.py  memory_visualizer.py
src/narrative_mind/: __init__.py  example.py  fluid_memory.py  llm_client.py  memory_chains.py  memory_organizer.py  memory_store.py  narrative_mind.py  narrative_mind_implementation.md  narrative_personality.py  test_fluid_memory.py  test_memory.py
src/prompt_crafting/: response_pattern_integration.py  response_variation.py
src/response-variability/: respvar_01.py  respvar_02.py
src/sdpo/: basic_sdpo.py
src/smol_agents/: README.md  creative_writer_agent.py  fact_finder_agent.py  ollama_model.py  quick_smol.py
src/topic_drift/: __init__.py  analyze_drift.py  analyze_examples.py  data_builder.py  data_cleaner.py  data_generator.py  data_loader.py  data_prep.py  data_types.py  llm_wrapper.py  nn_topic_drift_poc-v2.py  nn_topic_drift_poc.py  nn_topic_drift_poc_v2.py  save_model_to_hf.py  test_data_builder.py  usage.py
tests/: conftest.py
tests/unit/: test_context_awareness.py  test_repair_strategies.py  test_response_variation.py  test_turn_taking.py
(+14 files in other folders)
